--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.0.2
+  file_picker: ^8.0.6
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
+  firebase_storage: ^12.1.1
   flutter:
     sdk: flutter
   geolocator: ^12.0.0
