--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,14 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.0.2
+  fan_carousel_image_slider: ^1.0.1
   file_picker: ^8.0.6
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
   firebase_storage: ^12.1.1
   flutter:
     sdk: flutter
+  flutter_custom_carousel: ^0.1.0+1
   geolocator: ^12.0.0
   velocity_x: ^4.2.1
 
@@ -25,4 +27,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/spoco.png
+  - assets/spoco1.png
